Fix for bad invalidation/painting when deleting lines of text at the end of a document or mail message. b=86852 r=alexsavulov sr=waterson